[tool.poetry]
name = "datautilities"
version = "0.1.3"
description = ""
authors = ["DANRAMAGE <ChiefDan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.4.2"
requests = "^2.32.5"
ruff = "^0.13.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.3"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true
select = ["E", "F", "I"]
ignore = ["E501"]  # Ignore line-length since Black handles it
exclude = [
    ".venv",
    "build",
    "dist",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint.isort]
known-first-party = ["my_project"]
combine-as-imports = true
